# astro-tui

./: pyproject.toml
src/astro_tui/: __init__.py  app.py  app.tcss  chat.py  commands.py  demo_data.py
src/astro_tui/screens/: __init__.py  catalog.py  chat_screen.py  evaluation.py  home.py  ingestion.py  memory.py  observability.py  pipeline.py  query.py  retrieval.py
src/astro_tui/widgets/: __init__.py  context_table.py  diagnostics_panel.py  graph_view.py  metric_bars.py  status_indicator.py
