[project]
name = "astro-tui"
version = "0.1.0"
description = "Terminal chatbot showcasing the astro-context library"
readme = "README.md"
license = "MIT"
authors = [
    { name = "Arthur cavalcanti Granja", email = "artcgranja@gmail.com" }
]
requires-python = ">=3.11"
dependencies = [
    "astro-context[all]",
    "rich>=13,<15",
    "python-dotenv>=1.0",
]

[project.scripts]
astro-tui = "astro_tui.app:main"

[tool.uv.sources]
astro-context = { path = "../astro-context", editable = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
